--- a/app.json
+++ b/app.json
@@ -22,6 +22,7 @@
       "predictiveBackGestureEnabled": false
     },
     "web": {
+      "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
@@ -45,4 +46,4 @@
       "reactCompiler": true
     }
   }
-}
+}  
